<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/nav_account" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/nav_logout" />
        </menu>
    </item>

    <item android:title="@string/nav_app_info">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
