<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/add_jdm_layout"
    tools:context="com.pyozer.keskonsmar.AddJdmActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_input_jdm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/add_input_jdm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_input_jdm"
            android:inputType="textMultiLine"
            android:lines="6" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/add_input_jdm_layout"
        android:layout_marginBottom="90dp" />

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/add_input_jdm_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_action_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Annuler" />

        <Button
            android:id="@+id/add_action_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/add_action_submit"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>